force-app/main/default/objects/Option_de_reponse__c/Option_de_reponse__c.object-meta.xml
<CustomObject>
    <description>Liste des choix possible pour les réponses des questionnaires</description>
    <label>Option de réponse</label>
    <nameField>
        <displayFormat>ORQ/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Options de réponse</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>