force-app/main/default/objects/Option_de_reponse__c/fields/poids__c.field-meta.xml
<CustomField>
    <fullName>poids__c</fullName>
    <label>Poids</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>