force-app/main/default/objects/Option_de_reponse__c/fields/position__c.field-meta.xml
<CustomField>
    <fullName>position__c</fullName>
    <label>Position</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>