force-app/main/default/objects/Option_de_reponse__c/fields/questionQuestionnaire__c.field-meta.xml
<CustomField>
    <fullName>questionQuestionnaire__c</fullName>
    <label>Question questionnaire</label>
    <referenceTo>Question_questionnaire__c</referenceTo>
    <relationshipLabel>Options de réponse</relationshipLabel>
    <relationshipName>Options_de_reponse</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>