force-app/main/default/objects/Option_de_reponse__c/fields/valeur__c.field-meta.xml
<CustomField>
    <fullName>valeur__c</fullName>
    <label>Valeur</label>
    <type>TextArea</type>
</CustomField>